--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,105 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
+  margin:0;
+  padding:0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body{
+  background-image: linear-gradient(-20deg, #ddd6f3 0%, #faaca8 100%);
+  height:100vh;
+  overflow-x: hidden;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+}
+.container{
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  height:500px;
+  /* width:700px;
+  width:650px;*/
+  width:850px;
+}
+.container .card{
+  background-color:#fff;
+  width:100%;
+  border-radius:10px;
+  position:relative;
+  overflow: hidden;
+}
+.card img{
+  width:100%;
+  height:100%;
+  object-fit: cover;
+  border-radius:10px;
+  padding:5px;
+}
+.card img.animate{
+  animation: slideIn 0.5s linear 1 forwards;
+}
+.container .small-images{
+  padding:10px 25px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(12 , 1fr);
+  /* grid-template-columns: repeat(8 , 1fr); */
+  gap:5px;
+}
+.small-images img{
+  width:60px;
+  height:60px;
+  padding:2px;
+  background-color:#fff;
+  cursor:pointer;
+  transition:all 0.5s ease-in-out;
+}
+.small-images img.active{
+  box-shadow:0 5px 5px rgba(0,0,0,0.5);
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes slideIn {
+  0%{
+    transform:translateX(-100%);
   }
-  to {
-    transform: rotate(360deg);
+  25%{
+    transform:translateX(-75%);
+  }
+  50%{
+    transform:translateX(-50%);
+  }
+  75%{
+    transform:translateX(-25%);
+  }
+  100%{
+    transform:translateX(0);
+  }
+}
+@media (max-width:860px) {
+  .container{
+    width:650px;
+  }
+  .container .small-images{
+    grid-template-columns: repeat(8 , 1fr);
+  }
+}
+
+@media (max-width:660px) {
+  .container{
+    width:550px;
+  }
+}
+@media (max-width:560px) {
+  .container{
+    width:500px;
+  }
+  .container .small-images{
+    grid-template-columns: repeat(6 , 1fr);
+  }
+}
+@media (max-width:500px) {
+  .container{
+    width:450px;
   }
 }
